--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,27 @@
-*.txt
+# files
 *.root
 .idea
 *.dill
-*.pdf
 *.npy
 *.npz
 *.html
+*.pickle
+acc_form.pdf
+acc_form.md
+
+# folders
+presentation
+runners
+simulation
+data/0.5
+data/1
+data/5
+data/15
+data/30
+data/50
+data/100
+data/200
+data/dimuon
 
 ### macOS ###
 # General
