--- a/.dockerignore
+++ b/.dockerignore
@@ -7,6 +7,7 @@
 **/presentation
 **/data
 **/results
+**/cdot
 **/summaries
 **/__pycache__
 **/.idea
@@ -14,6 +15,7 @@
 ### Ignored files ###
 .git
 *.pyc
+*.pickle
 *.dill
 *.pdf
 *.npy
