--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,9 @@ acc_form.pdf
 acc_form.md
 
 # folders
-presentation
-runners
-simulation
+presentation/
+runners/
+simulation/
 data/0.5
 data/1
 data/5
