--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,10 @@ acc_form.pdf
 acc_form.md
 
 # folders
-presentation/
-runners/
-simulation/
+presentation
+presentation/presentation.py
+runners
+simulation
 data/0.5
 data/1
 data/5
